# MM-TiRa-harjoitustyo2022

./: .coverage  .coveragerc  .pylintrc  README.md  Viikko1_raportti.md  coverage.xml  maarittelydokumentti.md  pyproject.toml
.github/workflows/: main.yml
dokumentaatio/: Viikko1_raportti.md  Viikko2_raportti.md  Viikko3_raportti.md  Viikko4_raportti.md  Viikko5_raportti.md  Viikko6_raportti.md  kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: a_star.py  algorithm_core.py  index.py  jps.py  main.py  map_file.py  min_queue.py
src/maps/: den012d.map  lt_warehouse_n.map
src/tests/: test_a_star.py  test_core.py  test_jps.py  test_main.py  test_map_file.py  test_min_queue.py
src/ui/: view.py
