[tool.poetry]
name = "mm_tira_harjoitustyo"
version = "0.1.0"
description = ""
authors = ["evgeniia <evgeniia@saunalahti.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.3.3"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
